--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+    font-family: serif;
 }
 .container{
     width: 100%;
@@ -14,10 +14,10 @@
     justify-content: center;
 }
 .logo{
-    width: 200px;
+    width: 100px;
     position: absolute;
-    top: 2%;
-    left: 2%;
+    top: 1%;
+    left: 1%;
 }
 .hero{
     display: flex;
@@ -29,7 +29,7 @@
     height: 550px;
     /* border: 1px solid #ff004f; */
     box-shadow: -6px 6px 20px rgba(0, 0, 0, 0.8);
-    background: #000;
+    background: #1f2b37;
     display: flex;
     align-items: flex-end;
     justify-content: center;
@@ -56,7 +56,7 @@
     margin-top: 10px;
 }
 .right h3{
-    color: #ff004f;
+    color: #4f76f6;
     font-size: 16px;
     font-weight: 900;
 }
@@ -81,7 +81,7 @@ form{
     font-weight: 600;
 }
 .size-select input:checked + span{
-    color: #ff004f;
+    color: #4f76f6;
     font-weight: 700;
 }
 .size-select input{
@@ -156,7 +156,7 @@ button{
     border: none;
     outline: none;
     width: 100%;
-    background: #ff004f;
+    background: #4f76f6;
     color: #fff;
     height: 40px;
     padding: 10px 30px;
@@ -188,6 +188,6 @@ button:hover{
     transition: transform 0.3s;
 }
 .btn.active{
-    background: #ff004f;
-    transform: scale(1.5);
+    background: #4f76f6;
+    transform: scale(1.2);
 }
