--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@
 .container{
     width: 100%;
     height: 100vh;
-    background: #fdfff5;
+    background: #fff;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .logo{
-    width: 100px;
+    width: 40px;
     position: absolute;
     top: 1%;
     left: 1%;
@@ -29,7 +29,7 @@
     height: 550px;
     /* border: 1px solid #ff004f; */
     box-shadow: -6px 6px 20px rgba(0, 0, 0, 0.8);
-    background: #1f2b37;
+    background: #181818;
     display: flex;
     align-items: flex-end;
     justify-content: center;
@@ -56,7 +56,7 @@
     margin-top: 10px;
 }
 .right h3{
-    color: #4f76f6;
+    color: #6660ff;
     font-size: 16px;
     font-weight: 900;
 }
@@ -81,7 +81,7 @@ form{
     font-weight: 600;
 }
 .size-select input:checked + span{
-    color: #4f76f6;
+    color: #6660ff;
     font-weight: 700;
 }
 .size-select input{
@@ -156,7 +156,7 @@ button{
     border: none;
     outline: none;
     width: 100%;
-    background: #4f76f6;
+    background: #6660ff;
     color: #fff;
     height: 40px;
     padding: 10px 30px;
@@ -188,6 +188,6 @@ button:hover{
     transition: transform 0.3s;
 }
 .btn.active{
-    background: #4f76f6;
+    background: #6660ff;
     transform: scale(1.2);
 }
